--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function gtag_report_conversion(url) {
     <a class="whats-app" href="https://api.whatsapp.com/send?phone=2348065777679&amp;text=Good%20Day%20I%20Am%20Interested%20In%20Getting%20Your%20Prostate%20Shrink%20Solution%20Capsules." target="_blank">
         <i class="fa fa-whatsapp  my-float"></i>
      </a>
-     <link rel ="canonical" href="blives.xyz/index.html"/>
+   <link rel="canonical" href="https://prostate-wel.xyz/" />
      <link rel="stylesheet" type="text/css" href="boblives.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
