--- a/index.html
+++ b/index.html
@@ -242,8 +242,11 @@ document.addEventListener('DOMContentLoaded', function() {
 
     <header>
         <div class="container">
-            <h1 class="refund">Prostate Well</h1>
-            <p>Discover the Guaranteed Prostate Health Solution –<span class="hassle"> Get Relief or Your Money Back</span</p>
+            <h1 class="refund">NEW BREAKTHROUGH TREATMENT FOR ENLARGED PROSTATE AND PROSTATITIS HELPING NIGERIAN MEN
+WITHOUT SURGERY(WITHIN 30DAYS/LESS</h1>
+            <p>Discover the Guaranteed Prostate Health Solution –<span class="hassle">TAKE ADVANTAGE OF OUR AUGUST DISCOUNT AND GET THE TOP RATED PROSTATE TREATMENT RECOMMENDED AND APPROVED AS DISCOUNT PRICES ENDS IN FEW DAYS
+
+ </span</p>
         </div>
     </header>
  
@@ -260,63 +263,17 @@ document.addEventListener('DOMContentLoaded', function() {
     <li>🩸 Blood in the urine</li>
     <li>💔 Reduced Sexual Performance or erectile dysfunction</li>
 </ul>
-        <p><b>If you've tried other treatments and found only temporary relief or no relief, keep reading to discover a life-changing solution.</b></p>
+        <p><b>Are you not tired of using your Contiflo, Duodart or Tamulosin for maintaining the bondage of Prostate Enlargement which many doctors
+             had made you believe no cure for?
+The truth is this most of this orthodox medication has a lot of side effect which you wont be told  and some would only give temporary solutions
+             as they are to maintain symptoms and not fully cure, now you are getting the information about the herbal medication that has helped thousands of Nigerians
+             at your tip so if you decide not to act now it shows you are enjoying using your daily Contiflo, Duodart, Tamulosin etc.n.</b></p>
 
         <h2 class="definition">Attention Nigerian Men:</h2>
         <p>If you want to achieve permanent relief from prostate problems, urinate well, end urinary pain, stop frequent urination, and enjoy a healthy sex life again, then this will be the most exciting message you will ever read.</p>
 
         <p>Imagine never having to wake up multiple times at night to urinate, enjoying a healthy sex life again, no more painful urination, and traveling without the fear of frequent urination. If that sounds like a dream, keep reading because we have the perfect solution for you.</p>
-
-        <h2 class="definition">Introducing Our Unique Formula</h2>
-        <p><b>We have developed a unique formula made with 12 powerful African herbs that  work together to target the root cause of prostate issues and to ease the discomfort of prostate enlargement</b>  This is unlike anything you have ever heard or used before, and it is different from Contiflo, Duodart, or Tamulosin 
-            which put  you in bondage by maintaining the Prostate Enlargement .</p>
-         <p> We have used this groundbreaking formula to help countless men achieve lasting relief and a healthier life.</p>
-        <p>Traditionally a combination of medicinal roots, bark, seeds and leaves has been used  to balance hormones, 
-        to shrink enlarge prostate and to promote wellness,
-        <b>thereby shrinking prostate enlargement and also eliminating prostatitis.</b></p>
-        <p><b>We have records of 1067 men finding relief, and over 300 customers have brought in referrals.</b> </p>
-           <p> Our Success Stories Have Featured in Nigerian Newspapers </p>
-      <img src="img/punch.png">
-        <div class="testimonials">
-            <h2>Success Stories</h2>
-            <div class="testimonial">
-                 <img class="imgtest" src="img/qw.png" alt="Avatar" style="width:90px">
-                <h6>Mr. Ade (53), Berger Lagos: From Sleepless Nights to Peaceful Rest</h6>
-                <p>"Before discovering 'Prostate Well', I was waking up multiple times a night to urinate. I tried various treatments like Norland and Duodart, but nothing provided lasting relief. Within a few weeks of starting 'Prostate Well', I could sleep through the night without any interruptions. It’s truly a miracle. I finally have my life back!"</p>
-             <p>Contact for Verification: <a href="tel:+2347086865133">+2348033119148</a></p>
-     </div>
-            <div class="testimonial">
-                 <img class="imgtest" src="img/qwe.png" alt="Avatar" style="width:90px">
-               <h6>Mr. Yusuf (62) Maitama Abuja: Overcoming Skepticism and Finding True Relief</h6>
-                <p>"After spending over 250,000 Naira on different treatments with no success, I was extremely skeptical about trying another product. But 'Prostate Well' proved to be different. Not only did it provide relief, but it also improved my overall well-being. I can now enjoy activities without the constant fear of frequent urination. This product is a game-changer."</p>
-           <p>Contact for Verification: <a href="tel:+2347086865133">+2348161583146</a></p>
-            </div>
-            <div class="testimonial">
-                 <img class="imgtest" src="img/tfake.jpg" alt="Avatar" style="width:90px">
-                <h6>Mr. Chukwu (47)Adagharagba Street, Ughelli.: From Embarrassment to Confidence</h6>
-                <p>"Frequent urination was affecting every aspect of my life. I couldn't travel, and my social life suffered because I was always worried about finding a bathroom. 'Prostate Well' has changed everything. I can now travel long distances without worry, and my confidence has been restored. It’s unbelievable how effective this product is."</p>
-            <p>Contact for Verification: <a href="tel:+2347086865133">+2349040043127</a></p>
-            </div>
-            <div class="testimonial">
-                 <img class="imgtest" src="img/haruna.jpg" alt="Avatar" style="width:90px">
-                <h6>Mr. Adebayo (58) off Abaranje road, Ikotun Lagos : Rekindling Intimacy and Restoring Marital Bliss</h6>
-                <p>"Erectile dysfunction and frequent urination were straining my marriage. My wife and I were frustrated and losing hope. 'Prostate Well' didn’t just relieve my symptoms; it revitalized our intimacy. We can now enjoy our time together without any interruptions or embarrassment. This product saved my marriage and brought joy back into our lives."</p>
-            <p>Contact for Verification: <a href="tel:+2347086865133">+2349151625737</a></p>
-            </div>
-            <div class="testimonial">
-                <h6>Mr. Ojo (55) tanke ilorin: From Pain and Frustration to Freedom</h6>
-                 <img class="imgtest" src="img/police.png" alt="Avatar" style="width:90px">
-                <p>"The pain while urinating was unbearable. I needed to be placed on a catheter and was constantly frustrated with the lack of effective treatments and my fear of surgery. 'Prostate Well' offered me a solution that was both natural and powerful. The pain is gone, and I feel like I’ve been given a second chance at life. I removed my catheter after the second bottle. This product is nothing short of amazing."</p>
-              <p>Contact for Verification: <a href="tel:+2347086865133">+2348065777679</a></p>
-        </div>
-            <div class="testimonial">
-               <h6>Mr. Hassan (63) sabon Gari kano: A Journey from Desperation to Hope</h3>
-                <p>"I was on the verge of considering surgery because nothing else worked. The idea of using a catheter was terrifying. 'Prostate Well' was my last hope, and it delivered beyond my expectations. Not only did it prevent the need for surgery, but it also provided permanent relief from my prostate issues. I am eternally grateful for this product."</p>
-          <p>Contact for Verification: <a href="tel:+2347086865133">+2349054738318</a></p>
-            </div>
-        </div>
-
-        <h2 class="definition">Don’t Wait Until It’s Too Late</h2>
+           <h2 class="definition">Don’t Wait Until It’s Too Late</h2>
         <p>Prostate issues can lead to severe complications if left untreated, such as erectile dysfunction, bladder stones, blood in the urine, bladder damage, kidney damage, and even death. Imagine the constant pain, sleepless nights, and embarrassment continuing to control your life.</p>
 <img src="img/rush.gif">
    <h3 class="definition"><center>DO NOT LET IT RESULT TO THIS</h3></center>
@@ -327,8 +284,23 @@ document.addEventListener('DOMContentLoaded', function() {
             <li>Disrupted Sleep</li>
             <li>Strained Relationships</li>
             <li>Increased Medical Costs</li>
+            <li> Sudden inability to urinate.</li>
+            <li> Urinary Tract Infections (UTI’s).</li>
+            <li> Erectile Dysfunction.</li>
+            <li>Bladder stones.</li>
+            <li> Blood in the urine.</li>
+            <li> Bladder damage.</li>
+            <li> Kidney Damage.</li>
+            <li> Death</li>
         </ul>
+          <p>Don’t go for prostate S.U.R.G.E.R.Y (It Has After-Effect), 
+Surgery was the only solution for prostate patients in the past. Involves a “Transurethral Resection of the Prostate”
+(TURP) is surgery that removes some portion of the prostate gland through the penis. 
+  TURP is a major surgery which involves a lot of risks and potential complications.
+      Apart from the risk, The Enlargement grows back after a Period of Time. 
+   So why go for a Temporary solution when you can always go for the Permanent treatment that treats to the Core.</p>
 
+Use this product instead. Go for it if you can afford it. It is 100% Natural made from natural ingredients and not organic chemicals. Thus, you can combine it with any medications you have been using for certain ailments you are experiencing.
         <p>Your health and happiness are just a click away. Our limited stock is flying off the shelves due to high demand. Don’t miss your chance to experience the life-changing benefits of 'Prostate Well'.</p>
 
       Order 'Prostate Well' Today – Your Health and Happiness Are Just a Click Away
@@ -485,6 +457,56 @@ document.addEventListener('DOMContentLoaded', function() {
        <center> <button type="submit" id="submit-button" class="call-to-action-button" onclick="gtag_report_conversion();">GET MY PACK NOW</button> </center>
      </div>
   </form>
+        <h2 class="definition">Introducing Our Unique Formula</h2>
+        <p><b>We have developed a unique formula made with 12 powerful African herbs that  work together to target the root cause of prostate issues and to ease the discomfort of prostate enlargement</b>  This is unlike anything you have ever heard or used before, and it is different from Contiflo, Duodart, or Tamulosin 
+            which put  you in bondage by maintaining the Prostate Enlargement .</p>
+         <p> We have used this groundbreaking formula to help countless men achieve lasting relief and a healthier life.</p>
+        <p>Traditionally a combination of medicinal roots, bark, seeds and leaves has been used  to balance hormones, 
+        to shrink enlarge prostate and to promote wellness,
+        <b>thereby shrinking prostate enlargement and also eliminating prostatitis.</b></p>
+        <p><b>We have records of 1067 men finding relief, and over 300 customers have brought in referrals.</b> </p>
+           <p> Our Success Stories Have Featured in Nigerian Newspapers </p>
+      <img src="img/punch.png">
+        <div class="testimonials">
+            <h2>Success Stories</h2>
+            <div class="testimonial">
+                 <img class="imgtest" src="img/qw.png" alt="Avatar" style="width:90px">
+                <h6>Mr. Ade (53), Berger Lagos: From Sleepless Nights to Peaceful Rest</h6>
+                <p>"Before discovering 'Prostate Well', I was waking up multiple times a night to urinate. I tried various treatments like Norland and Duodart, but nothing provided lasting relief. Within a few weeks of starting 'Prostate Well', I could sleep through the night without any interruptions. It’s truly a miracle. I finally have my life back!"</p>
+             <p>Contact for Verification: <a href="tel:+2347086865133">+2348033119148</a></p>
+     </div>
+            <div class="testimonial">
+                 <img class="imgtest" src="img/qwe.png" alt="Avatar" style="width:90px">
+               <h6>Mr. Yusuf (62) Maitama Abuja: Overcoming Skepticism and Finding True Relief</h6>
+                <p>"After spending over 250,000 Naira on different treatments with no success, I was extremely skeptical about trying another product. But 'Prostate Well' proved to be different. Not only did it provide relief, but it also improved my overall well-being. I can now enjoy activities without the constant fear of frequent urination. This product is a game-changer."</p>
+           <p>Contact for Verification: <a href="tel:+2347086865133">+2348161583146</a></p>
+            </div>
+            <div class="testimonial">
+                 <img class="imgtest" src="img/tfake.jpg" alt="Avatar" style="width:90px">
+                <h6>Mr. Chukwu (47)Adagharagba Street, Ughelli.: From Embarrassment to Confidence</h6>
+                <p>"Frequent urination was affecting every aspect of my life. I couldn't travel, and my social life suffered because I was always worried about finding a bathroom. 'Prostate Well' has changed everything. I can now travel long distances without worry, and my confidence has been restored. It’s unbelievable how effective this product is."</p>
+            <p>Contact for Verification: <a href="tel:+2347086865133">+2349040043127</a></p>
+            </div>
+            <div class="testimonial">
+                 <img class="imgtest" src="img/haruna.jpg" alt="Avatar" style="width:90px">
+                <h6>Mr. Adebayo (58) off Abaranje road, Ikotun Lagos : Rekindling Intimacy and Restoring Marital Bliss</h6>
+                <p>"Erectile dysfunction and frequent urination were straining my marriage. My wife and I were frustrated and losing hope. 'Prostate Well' didn’t just relieve my symptoms; it revitalized our intimacy. We can now enjoy our time together without any interruptions or embarrassment. This product saved my marriage and brought joy back into our lives."</p>
+            <p>Contact for Verification: <a href="tel:+2347086865133">+2349151625737</a></p>
+            </div>
+            <div class="testimonial">
+                <h6>Mr. Ojo (55) tanke ilorin: From Pain and Frustration to Freedom</h6>
+                 <img class="imgtest" src="img/police.png" alt="Avatar" style="width:90px">
+                <p>"The pain while urinating was unbearable. I needed to be placed on a catheter and was constantly frustrated with the lack of effective treatments and my fear of surgery. 'Prostate Well' offered me a solution that was both natural and powerful. The pain is gone, and I feel like I’ve been given a second chance at life. I removed my catheter after the second bottle. This product is nothing short of amazing."</p>
+              <p>Contact for Verification: <a href="tel:+2347086865133">+2348065777679</a></p>
+        </div>
+            <div class="testimonial">
+               <h6>Mr. Hassan (63) sabon Gari kano: A Journey from Desperation to Hope</h3>
+                <p>"I was on the verge of considering surgery because nothing else worked. The idea of using a catheter was terrifying. 'Prostate Well' was my last hope, and it delivered beyond my expectations. Not only did it prevent the need for surgery, but it also provided permanent relief from my prostate issues. I am eternally grateful for this product."</p>
+          <p>Contact for Verification: <a href="tel:+2347086865133">+2349054738318</a></p>
+            </div>
+        </div>
+
+       
      
    <div class="leaves-bg">
         <div class="container-fluid">
