--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@ The truth is this most of this orthodox medication has a lot of side effect whic
 <img src="img/rush.gif">
    <h3 class="definition"><center>DO NOT LET IT RESULT TO THIS</h3></center>
    <img src="img/catheter.jpg">
-        <h3>Act Now and Avoid the Consequences:</h3>
-        <ul>
+         <h3 class="definition">Act Now and Avoid the Consequences:</h3>
+        <ul><b>
             <li>Continued Pain and Discomfort</li>
             <li>Disrupted Sleep</li>
             <li>Strained Relationships</li>
@@ -291,14 +291,14 @@ The truth is this most of this orthodox medication has a lot of side effect whic
             <li> Blood in the urine.</li>
             <li> Bladder damage.</li>
             <li> Kidney Damage.</li>
-            <li> Death</li>
+            <li> Death</li></b>
         </ul>
-          <p>Don’t go for prostate S.U.R.G.E.R.Y (It Has After-Effect), 
+          <p><b>Don’t go for prostate S.U.R.G.E.R.Y (It Has After-Effect), 
 Surgery was the only solution for prostate patients in the past. Involves a “Transurethral Resection of the Prostate”
 (TURP) is surgery that removes some portion of the prostate gland through the penis. 
   TURP is a major surgery which involves a lot of risks and potential complications.
       Apart from the risk, The Enlargement grows back after a Period of Time. 
-   So why go for a Temporary solution when you can always go for the Permanent treatment that treats to the Core.</p>
+   So why go for a Temporary solution when you can always go for the Permanent treatment that treats to the Core.</p></b>
 
 Use this product instead. Go for it if you can afford it. It is 100% Natural made from natural ingredients and not organic chemicals. Thus, you can combine it with any medications you have been using for certain ailments you are experiencing.
         <p>Your health and happiness are just a click away. Our limited stock is flying off the shelves due to high demand. Don’t miss your chance to experience the life-changing benefits of 'Prostate Well'.</p>
