--- a/index.html
+++ b/index.html
@@ -222,6 +222,35 @@ ul.symptom-list li::before {
 .faq h3:hover {
     color: #007bff; /* Change question color on hover */
 }
+
+
+.benefits-container {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+h2 {
+    font-size: 24px;
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.benefits-list {
+    list-style-type: disc;
+    padding-left: 40px;
+    line-height: 1.6;
+    color: #555;
+}
+
+.benefits-list li {
+    margin-bottom: 10px;
+}
+       
  </style>
 
 <script>
@@ -300,10 +329,22 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
       Apart from the risk, The Enlargement grows back after a Period of Time. 
    So why go for a Temporary solution when you can always go for the Permanent treatment that treats to the Core.</p></b>
 
-Use this product instead. Go for it if you can afford it. It is 100% Natural made from natural ingredients and not organic chemicals. Thus, you can combine it with any medications you have been using for certain ailments you are experiencing.
-        <p>Your health and happiness are just a click away. Our limited stock is flying off the shelves due to high demand. Don’t miss your chance to experience the life-changing benefits of 'Prostate Well'.</p>
+<p><b>Use this product instead. Go for it if you can afford it. It is 100% Natural made from natural ingredients and not organic chemicals. 
+     Thus, you can combine it with any medications you have been using for certain ailments you are experiencing.</p></b>
+ <p>Your health and happiness are just a click away. Our limited stock is flying off the shelves due to high demand. Don’t miss your chance to experience the life-changing benefits of 'Prostate Well'.</p>
 
-      Order 'Prostate Well' Today – Your Health and Happiness Are Just a Click Away
+<div class="benefits-container">
+        <h2>What You Stand To Get With This Incredible Solution</h2>
+        <ul class="benefits-list">
+            <li>Your enlarged prostate or your prostate gland will be corrected and restored to its original healthy state.</li>
+            <li>You will never have to wake up frequently at night to urinate again; which means you will enjoy a peaceful sleep always.</li>
+            <li>The difficulty you experience when urinating will finally stop.</li>
+            <li>You will be able to fully empty your bladder at a go, and the dribbling will finally stop.</li>
+            <li>If you’re already experiencing blood in urine or you’ve developed a urinary tract infection due to poor treatment of the enlarged prostate, this pack will also help you treat these conditions successfully.</li>
+            <li>Your sex life and vitality will be restored and come back to life.</li>
+            <li>Most importantly, you’ll become healthy once again and thus prolong your life, and many more.</li>
+        </ul>
+    </div>
     </section>
      <h3 class="hame"> Don't let skepticism hold you back any longer. It's time to take charge of your prostate health and reclaim your life.</h3>  
      <img src="img/prowel.jpg"/>
