--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ ul.symptom-list li::before {
 
 h2 {
     font-size: 24px;
-    color: #333;
+    color: red;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -335,14 +335,14 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
 
 <div class="benefits-container">
         <h2>What You Stand To Get With This Incredible Solution</h2>
-        <ul class="benefits-list">
+        <ul class="benefits-list"><b>
             <li>Your enlarged prostate or your prostate gland will be corrected and restored to its original healthy state.</li>
             <li>You will never have to wake up frequently at night to urinate again; which means you will enjoy a peaceful sleep always.</li>
             <li>The difficulty you experience when urinating will finally stop.</li>
             <li>You will be able to fully empty your bladder at a go, and the dribbling will finally stop.</li>
             <li>If you’re already experiencing blood in urine or you’ve developed a urinary tract infection due to poor treatment of the enlarged prostate, this pack will also help you treat these conditions successfully.</li>
             <li>Your sex life and vitality will be restored and come back to life.</li>
-            <li>Most importantly, you’ll become healthy once again and thus prolong your life, and many more.</li>
+            <li>Most importantly, you’ll become healthy once again and thus prolong your life, and many more.</li></b>
         </ul>
     </div>
     </section>
