--- a/index.html
+++ b/index.html
@@ -250,7 +250,51 @@ h2 {
 .benefits-list li {
     margin-bottom: 10px;
 }
-       
+
+
+.content-container {
+    max-width: 800px;
+    margin: 40px auto;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    line-height: 1.6;
+    text-align: left;
+}
+
+p {
+    margin-bottom: 15px;
+    font-size: 18px;
+    color: #333;
+}
+
+.intro-text {
+    font-size: 20px;
+    color: #e63946;
+    font-weight: bold;
+}
+
+.highlight-text {
+    background-color: #f1faee;
+    padding: 10px;
+    border-left: 4px solid #e63946;
+    font-weight: bold;
+}
+
+.main-text {
+    font-size: 18px;
+    color: #1d3557;
+    margin-top: 20px;
+}
+
+.closing-text {
+    font-size: 18px;
+    color: #457b9d;
+    margin-top: 20px;
+    font-style: italic;
+}
+     
  </style>
 
 <script>
@@ -344,6 +388,24 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
             <li>Your sex life and vitality will be restored and come back to life.</li>
             <li>Most importantly, you’ll become healthy once again and thus prolong your life, and many more.</li></b>
         </ul>
+    </div>
+         <div class="content-container">
+        <p class="intro-text">
+            So even if you’ve tried other treatments in the past with little or no result, 
+            <strong>Our Natural Prostate Care Pack</strong> is the answer, as it works very successfully for 99% of men.
+        </p>
+        <p class="highlight-text">
+            Containing 25 natural phytoceutical extracts, proven to reverse and cure Prostate Enlargement and other prostate symptoms.
+        </p>
+        <p class="main-text">
+            It is the most comprehensive Prostate and general men’s product on the market.
+        </p>
+        <p class="highlight-text">
+            <strong>OUR NATURAL PROSTATE CARE PACK</strong> contains the latest clinically tried ingredients such as Lycopene, Bee Hive, Standardized Saw Palmetto, Berry Extract, and Zinc, to name but a few.
+        </p>
+        <p class="closing-text">
+            It has no known side effects. It’s a complete, easy-to-use solution for correcting an enlarged prostate.
+        </p>
     </div>
     </section>
      <h3 class="hame"> Don't let skepticism hold you back any longer. It's time to take charge of your prostate health and reclaim your life.</h3>  
