--- a/index.html
+++ b/index.html
@@ -294,6 +294,75 @@ p {
     margin-top: 20px;
     font-style: italic;
 }
+     .prostate-well-section {
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin-top: 50px;
+}
+
+/* Header for the title */
+h1 {
+    color: #2c3e50;
+    font-size: 28px;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+/* Subheading for the "How it works" section */
+h2 {
+    color: #34495e;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+/* Styling for the ingredient list */
+.ingredient-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.ingredient-list li {
+    font-size: 16px;
+    margin: 10px 0;
+}
+
+.ingredient-list strong {
+    color: #16a085;
+}
+
+/* Styling for the images */
+.media {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+.product-image {
+    width: 45%;
+    border-radius: 10px;
+}
+
+.ingredients-image {
+    width: 45%;
+    border-radius: 10px;
+}
+
+/* Responsive design for smaller screens */
+@media (max-width: 768px) {
+    .media {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .product-image, .ingredients-image {
+        width: 80%;
+        margin-bottom: 20px;
+    }
+         }
      
  </style>
 
@@ -315,9 +384,8 @@ document.addEventListener('DOMContentLoaded', function() {
 
     <header>
         <div class="container">
-            <h1 class="refund">NEW BREAKTHROUGH TREATMENT FOR ENLARGED PROSTATE AND PROSTATITIS HELPING NIGERIAN MEN
-WITHOUT SURGERY(WITHIN 30DAYS/LESS</h1>
-            <p>Discover the Guaranteed Prostate Health Solution –<span class="hassle">TAKE ADVANTAGE OF OUR AUGUST DISCOUNT AND GET THE TOP RATED PROSTATE TREATMENT RECOMMENDED AND APPROVED AS DISCOUNT PRICES ENDS IN FEW DAYS
+            <h1 class="refund">SAY GOODBYE TO ENLARGED PROSTATE, PROSTATITIS AND OTHER PROSTATE PROBLEMS IN JUST 30DAYSS</h1>
+            <p>Clinically Proven | Approved by NAFDAC | Trusted by Thousands of Nigerian Men–<span class="hassle">TAKE ADVANTAGE OF OUR END OF YEAR DISCOUNT AND GET THE TOP RATED PROSTATE TREATMENT RECOMMENDED AND APPROVED AS DISCOUNT PRICES ENDS IN FEW DAYS
 
  </span</p>
         </div>
@@ -325,7 +393,7 @@ WITHOUT SURGERY(WITHIN 30DAYS/LESS</h1>
  
      <hr>
     <section class="container2">
-        <h2>Are You Tired Of:</h2>
+        <h2>Do These Symptoms Sound familiar:</h2>
         <ul class="symptom-list">
     <li>🚽 Frequent urination causing sleepless nights</li>
     <li>🔥 Pain while urinating</li>
@@ -336,6 +404,7 @@ WITHOUT SURGERY(WITHIN 30DAYS/LESS</h1>
     <li>🩸 Blood in the urine</li>
     <li>💔 Reduced Sexual Performance or erectile dysfunction</li>
 </ul>
+<img src="img/illus.jpeg">
         <p><b>Are you not tired of using your Contiflo, Duodart or Tamulosin for maintaining the bondage of Prostate Enlargement which many doctors
              had made you believe no cure for?
 The truth is this most of this orthodox medication has a lot of side effect which you wont be told  and some would only give temporary solutions
@@ -373,8 +442,34 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
       Apart from the risk, The Enlargement grows back after a Period of Time. 
    So why go for a Temporary solution when you can always go for the Permanent treatment that treats to the Core.</p></b>
 
+
 <p><b>Use this product instead. Go for it if you can afford it. It is 100% Natural made from natural ingredients and not organic chemicals. 
      Thus, you can combine it with any medications you have been using for certain ailments you are experiencing.</p></b>
+ <section class="prostate-well-section">
+        <h1>Here’s How Prostate Well Works to Solve Your Prostate Problems Permanently!</h1>
+        <p>Prostate Well is made with all-natural ingredients that work together to shrink your prostate, lower your PSA levels, and stop the pain and discomfort you've been feeling.</p>
+        
+        <h2>How It Works:</h2>
+        <ul class="ingredient-list">
+            <li><strong>Saw Palmetto:</strong> Helps reduce prostate size and relieve frequent urination.</li>
+            <li><strong>Nettle Root:</strong> Eases pain and helps you urinate better.</li>
+            <li><strong>Pygeum Bark:</strong> Improves sexual health and reduces prostate inflammation.</li>
+            <li><strong>Pumpkin Seed Oil:</strong> Keeps your bladder healthy and reduces discomfort when urinating.</li>
+            <li><strong>Beta-Sitosterol:</strong> Supports healthy urine flow and reduces bladder problems.</li>
+            <li><strong>Zinc:</strong> Helps maintain healthy prostate function and reduces inflammation.</li>
+            <li><strong>Lycopene:</strong> A powerful antioxidant that supports prostate health and reduces the risk of enlargement.</li>
+            <li><strong>Quercetin:</strong> Reduces swelling in the prostate and helps with urination.</li>
+            <li><strong>Turmeric:</strong> Contains anti-inflammatory properties that help reduce pain and inflammation.</li>
+            <li><strong>Green Tea Extract:</strong> Improves prostate health and helps lower PSA levels.</li>
+        </ul>
+
+        <p>These ingredients work together to give lasting results and help you live pain-free without worrying about surgery or expensive treatments.</p>
+
+        <div class="media">
+            <img src="product-photo.jpg" alt="Prostate Well Bottle" class="product-image">
+            <img src="ingredients-infographic.jpg" alt="Ingredients Infographic" class="ingredients-image">
+        </div>
+    </section>
  <p>Your health and happiness are just a click away. Our limited stock is flying off the shelves due to high demand. Don’t miss your chance to experience the life-changing benefits of 'Prostate Well'.</p>
 
 <div class="benefits-container">
