--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ p {
     font-style: italic;
 }
      .prostate-well-section {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
@@ -404,7 +404,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <li>🩸 Blood in the urine</li>
     <li>💔 Reduced Sexual Performance or erectile dysfunction</li>
 </ul>
-<img src="img/illus.jpeg">
+<img src="img/illu.jpeg">
         <p><b>Are you not tired of using your Contiflo, Duodart or Tamulosin for maintaining the bondage of Prostate Enlargement which many doctors
              had made you believe no cure for?
 The truth is this most of this orthodox medication has a lot of side effect which you wont be told  and some would only give temporary solutions
