--- a/index.html
+++ b/index.html
@@ -416,25 +416,11 @@ The truth is this most of this orthodox medication has a lot of side effect whic
 
         <p>Imagine never having to wake up multiple times at night to urinate, enjoying a healthy sex life again, no more painful urination, and traveling without the fear of frequent urination. If that sounds like a dream, keep reading because we have the perfect solution for you.</p>
            <h2 class="definition">Don’t Wait Until It’s Too Late</h2>
-        <p>Prostate issues can lead to severe complications if left untreated, such as erectile dysfunction, bladder stones, blood in the urine, bladder damage, kidney damage, and even death. Imagine the constant pain, sleepless nights, and embarrassment continuing to control your life.</p>
+        <p>Prostate issues can lead to severe complications if left untreated, such as <strong>erectile dysfunction, bladder stones, blood in the urine, bladder damage, kidney damage, and even death</strong>. Imagine the constant pain, sleepless nights, and embarrassment continuing to control your life.</p>
 <img src="img/rush.gif">
    <h3 class="definition"><center>DO NOT LET IT RESULT TO THIS</h3></center>
    <img src="img/catheter.jpg">
          <h3 class="definition">Act Now and Avoid the Consequences:</h3>
-        <ul><b>
-            <li>Continued Pain and Discomfort</li>
-            <li>Disrupted Sleep</li>
-            <li>Strained Relationships</li>
-            <li>Increased Medical Costs</li>
-            <li> Sudden inability to urinate.</li>
-            <li> Urinary Tract Infections (UTI’s).</li>
-            <li> Erectile Dysfunction.</li>
-            <li>Bladder stones.</li>
-            <li> Blood in the urine.</li>
-            <li> Bladder damage.</li>
-            <li> Kidney Damage.</li>
-            <li> Death</li></b>
-        </ul>
           <p><b>Don’t go for prostate S.U.R.G.E.R.Y (It Has After-Effect), 
 Surgery was the only solution for prostate patients in the past. Involves a “Transurethral Resection of the Prostate”
 (TURP) is surgery that removes some portion of the prostate gland through the penis. 
