--- a/index.html
+++ b/index.html
@@ -304,20 +304,7 @@ p {
     margin-top: 50px;
 }
 
-/* Header for the title */
-h1 {
-    color: #2c3e50;
-    font-size: 28px;
-    text-align: center;
-    margin-bottom: 15px;
-}
 
-/* Subheading for the "How it works" section */
-h2 {
-    color: #34495e;
-    font-size: 24px;
-    margin-bottom: 10px;
-}
 
 /* Styling for the ingredient list */
 .ingredient-list {
@@ -421,7 +408,7 @@ The truth is this most of this orthodox medication has a lot of side effect whic
    <h3 class="definition"><center>DO NOT LET IT RESULT TO THIS</h3></center>
    <img src="img/catheter.jpg">
          <h3 class="definition">Act Now and Avoid the Consequences:</h3>
-          <p><b>Don’t go for prostate S.U.R.G.E.R.Y (It Has After-Effect), 
+          <p><b>Don’t go for prostate <span style="color:red;">S.U.R.G.E.R.Y</span> (It Has After-Effect), 
 Surgery was the only solution for prostate patients in the past. Involves a “Transurethral Resection of the Prostate”
 (TURP) is surgery that removes some portion of the prostate gland through the penis. 
   TURP is a major surgery which involves a lot of risks and potential complications.
