--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ The truth is this most of this orthodox medication has a lot of side effect whic
    <h3 class="definition"><center>DO NOT LET IT RESULT TO THIS</h3></center>
    <img src="img/catheter.jpg">
          <h3 class="definition">Act Now and Avoid the Consequences:</h3>
-          <p><b>Don’t go for prostate <span style="color:red;">S.U.R.G.E.R.Y</span> (It Has After-Effect), 
+          <p><b>Don’t go for prostate <span style="color:red; font-weight: bold;">S.U.R.G.E.R.Y</span> (It Has After-Effect), 
 Surgery was the only solution for prostate patients in the past. Involves a “Transurethral Resection of the Prostate”
 (TURP) is surgery that removes some portion of the prostate gland through the penis. 
   TURP is a major surgery which involves a lot of risks and potential complications.
@@ -439,8 +439,8 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
         <p>These ingredients work together to give lasting results and help you live pain-free without worrying about surgery or expensive treatments.</p>
 
         <div class="media">
-            <img src="product-photo.jpg" alt="Prostate Well Bottle" class="product-image">
-            <img src="ingredients-infographic.jpg" alt="Ingredients Infographic" class="ingredients-image">
+            <img src="img/prowel.jpg" alt="Prostate Well Bottle" class="product-image">
+            
         </div>
     </section>
  <p>Your health and happiness are just a click away. Our limited stock is flying off the shelves due to high demand. Don’t miss your chance to experience the life-changing benefits of 'Prostate Well'.</p>
