--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ Surgery was the only solution for prostate patients in the past. Involves a “T
           <p>Contact for Verification: <a href="tel:+2347086865133">+2349054738318</a></p>
             </div>
         </div>
-        <p><b><<span style="color: red; font-weight: bold;">PLEASE NOTE: All testimonials are from real people. In accordance with the latest FTC guidelines,
+        <p><b><span style="color: red; font-weight: bold;">PLEASE NOTE</span>: All testimonials are from real people. In accordance with the latest FTC guidelines,
          we want to make it explicitly clear that the testimonials and customer letters we have received are exceptional results.</p></b>
          <div class="content-container">
         <p class="intro-text">
